--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   url_launcher: ^6.3.1
   uuid: ^4.5.1
   csv: ^6.0.0
+  excel: ^4.0.0
   dotted_border: ^3.1.0
   package_info_plus: ^9.0.0
   dynamic_color: ^1.7.0
